Fix link typo in Zermelo\'s\ Problem.ipynb

--- a/Lecture-9/Zermelo's Problem.ipynb
+++ b/Lecture-9/Zermelo's Problem.ipynb
@@ -16,7 +16,7 @@
     "pip install --upgrade jupyter numpy matplotlib scipy\n",
     "jupyter notebook  # from the directory of this notebook\n",
     "```\n",
-    "Alternatively, view this notebook on [Google Colab](https://colab.research.google.com/github/StanfordASL/AA203-Examples/blob/master/Lecture-9/Zermelo's%20Problem.ipynb.ipynb)."
+    "Alternatively, view this notebook on [Google Colab](https://colab.research.google.com/github/StanfordASL/AA203-Examples/blob/master/Lecture-9/Zermelo's%20Problem.ipynb)."
    ]
   },
   {
