--- a/Lecture-9/Zermelo's Problem.ipynb
+++ b/Lecture-9/Zermelo's Problem.ipynb
@@ -8,12 +8,12 @@
     "\n",
     "Dependencies:\n",
     "- System: python3\n",
-    "- Python: jupyter, numpy, matplotlib, scipy\n",
+    "- Python: jupyter, numpy, matplotlib, scipy, jax, cvxpy\n",
     "\n",
     "Example setup for a Ubuntu system (Mac users, maybe `brew` instead of `sudo apt`; Windows users, learn to love [WSL](https://docs.microsoft.com/en-us/windows/wsl/install-win10)):\n",
     "```\n",
     "/usr/bin/python3 -m pip install --upgrade pip\n",
-    "pip install --upgrade jupyter numpy matplotlib scipy\n",
+    "pip install --upgrade jupyter numpy matplotlib scipy jax cvxpy\n",
     "jupyter notebook  # from the directory of this notebook\n",
     "```\n",
     "Alternatively, view this notebook on [Google Colab](https://colab.research.google.com/github/StanfordASL/AA203-Examples/blob/master/Lecture-9/Zermelo's%20Problem.ipynb)."
@@ -25,9 +25,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import cvxpy as cp\n",
+    "import jax\n",
+    "import jax.numpy as jnp\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.optimize import minimize, Bounds"
+    "from scipy.optimize import minimize, Bounds\n",
+    "\n",
+    "# Constants used in plots below\n",
+    "t_f, N = 10, 20\n",
+    "h = t_f / N"
    ]
   },
   {
@@ -101,16 +108,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_opt, y_opt, z_opt = zermelo_simultaneous()\n",
-    "t_f, N = 10, 20\n",
-    "h = t_f / N\n",
+    "x_opt, y_opt, u_opt = zermelo_simultaneous()\n",
     "plt.figure(figsize=(15, 8))\n",
     "plt.subplot(1, 2, 1)\n",
     "plt.plot(x_opt, y_opt)\n",
     "plt.title(\"Optimal Trajectory\", fontsize=24)\n",
     "plt.subplot(1, 2, 2)\n",
     "plt.title(\"Optimal Control\", fontsize=24)\n",
-    "plt.plot(np.arange(N) * h, z_opt)"
+    "plt.plot(np.arange(N) * h, u_opt)"
    ]
   },
   {
@@ -121,15 +126,15 @@
    },
    "outputs": [],
    "source": [
-    "x_opt, y_opt, z_opt = zermelo_simultaneous(1.0, verbose=False)\n",
-    "x_opt, y_opt, z_opt = zermelo_simultaneous(0.75, np.concatenate([x_opt, y_opt, z_opt]))\n",
+    "x_opt, y_opt, u_opt = zermelo_simultaneous(1.0, verbose=False)\n",
+    "x_opt, y_opt, u_opt = zermelo_simultaneous(0.75, np.concatenate([x_opt, y_opt, u_opt]))\n",
     "plt.figure(figsize=(15, 8))\n",
     "plt.subplot(1, 2, 1)\n",
     "plt.plot(x_opt, y_opt)\n",
     "plt.title(\"Optimal Trajectory\", fontsize=24)\n",
     "plt.subplot(1, 2, 2)\n",
     "plt.title(\"Optimal Control\", fontsize=24)\n",
-    "plt.plot(np.arange(N) * h, z_opt)"
+    "plt.plot(np.arange(N) * h, u_opt)"
    ]
   },
   {
@@ -201,14 +206,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_opt, y_opt, z_opt = zermelo_shooting(1.0)\n",
+    "x_opt, y_opt, u_opt = zermelo_shooting(1.0)\n",
     "plt.figure(figsize=(15, 8))\n",
     "plt.subplot(1, 2, 1)\n",
     "plt.plot(x_opt, y_opt)\n",
     "plt.title(\"Optimal Trajectory\", fontsize=24)\n",
     "plt.subplot(1, 2, 2)\n",
     "plt.title(\"Optimal Control\", fontsize=24)\n",
-    "plt.plot(np.arange(N) * h, z_opt)"
+    "plt.plot(np.arange(N) * h, u_opt)"
    ]
   },
   {
@@ -217,14 +222,114 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_opt, y_opt, z_opt = zermelo_shooting(0.75)\n",
+    "x_opt, y_opt, u_opt = zermelo_shooting(0.75)\n",
     "plt.figure(figsize=(15, 8))\n",
     "plt.subplot(1, 2, 1)\n",
     "plt.plot(x_opt, y_opt)\n",
     "plt.title(\"Optimal Trajectory\", fontsize=24)\n",
     "plt.subplot(1, 2, 2)\n",
     "plt.title(\"Optimal Control\", fontsize=24)\n",
-    "plt.plot(np.arange(N) * h, z_opt)"
+    "plt.plot(np.arange(N) * h, u_opt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sequential Convex Programming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def zermelo_scp(u_max=1.0, verbose=True):\n",
+    "\n",
+    "    # Problem parameters\n",
+    "    t_f = 10\n",
+    "    M = 10\n",
+    "    ℓ = 5\n",
+    "    v = 1\n",
+    "    flow = lambda y: 0.35 / (ℓ**2 / 4) * y * (ℓ - y)\n",
+    "\n",
+    "    # Discretization\n",
+    "    N = 20\n",
+    "    h = t_f / N\n",
+    "    dynamics = lambda x, u, np=jnp: x + h * np.array([v * np.cos(u[0]) + flow(x[1]), v * np.sin(u[0])])\n",
+    "\n",
+    "    # Linearization\n",
+    "    dynamics_jacobian = jax.jit(jax.jacfwd(dynamics, (0, 1)))\n",
+    "\n",
+    "    def linearized_dynamics(x_nom, u_nom, x, u):\n",
+    "        # Slightly different interface compared to your homework to force you guys to think\n",
+    "        f_x, f_u = map(np.array, dynamics_jacobian(x_nom, u_nom))\n",
+    "        return dynamics(x_nom, u_nom, np=np) + f_x @ (x - x_nom) + f_u @ (u - u_nom)\n",
+    "\n",
+    "    # Set up problem and apply sequential convex programming\n",
+    "    x0 = np.zeros(2)\n",
+    "    xf = np.array([M, ℓ])\n",
+    "    x_nom = np.linspace(x0, xf, N + 1)\n",
+    "    u_nom = 0.6 * u_max * np.ones((N, 1))\n",
+    "\n",
+    "    max_absolute_difference = np.inf\n",
+    "    for i in range(100):\n",
+    "        x = cp.Variable((N + 1, 2))\n",
+    "        u = cp.Variable((N, 1))\n",
+    "        s = cp.Variable()\n",
+    "        cost = cp.sum(h * cp.square(u))\n",
+    "        constraints = [x[i + 1] == linearized_dynamics(x_nom[i], u_nom[i], x[i], u[i]) for i in range(N)]\n",
+    "        constraints += [x[0] == x0, x[-1] == xf]                   # initial/terminal constraints\n",
+    "        constraints += [x >= x0[np.newaxis], x <= xf[np.newaxis]]  # state box constraints\n",
+    "        constraints += [cp.abs(u) <= u_max + s]                    # control constraints\n",
+    "        constraints += [s >= 0]                                    # slack variable must be positive\n",
+    "        problem = cp.Problem(cp.Minimize(cost + s), constraints)\n",
+    "\n",
+    "        cost_value = problem.solve()\n",
+    "        max_absolute_difference = max(np.max(np.abs(x_nom - x.value)), np.max(np.abs(u_nom - u.value)))\n",
+    "        if verbose:\n",
+    "            print(f\"Iteration {i:2}, cost = {cost_value:7.4f}, slack variable = {s.value:7.4f}, \"\n",
+    "                  f\"max_absolute_difference = {max_absolute_difference}\")\n",
+    "        converged = max_absolute_difference < 1e-3\n",
+    "        x_nom = x.value\n",
+    "        u_nom = u.value\n",
+    "        if converged:\n",
+    "            break\n",
+    "\n",
+    "    return x_nom[:, 0], x_nom[:, 1], u_nom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_opt, y_opt, u_opt = zermelo_scp()\n",
+    "plt.figure(figsize=(15, 8))\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.plot(x_opt, y_opt)\n",
+    "plt.title(\"Optimal Trajectory\", fontsize=24)\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.title(\"Optimal Control\", fontsize=24)\n",
+    "plt.plot(np.arange(N) * h, u_opt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_opt, y_opt, u_opt = zermelo_scp(0.75)\n",
+    "plt.figure(figsize=(15, 8))\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.plot(x_opt, y_opt)\n",
+    "plt.title(\"Optimal Trajectory\", fontsize=24)\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.title(\"Optimal Control\", fontsize=24)\n",
+    "plt.plot(np.arange(N) * h, u_opt)"
    ]
   },
   {
