Clean slate for 2022 (see the 2021 branch for last year's notebooks)

--- a/Lecture-1/Controlling a Double Integrator.ipynb
+++ b/Lecture-1/Controlling a Double Integrator.ipynb
@@ -17,7 +17,8 @@
     "pip install --upgrade jupyter numpy matplotlib cvxpy ipywidgets\n",
     "jupyter nbextension enable --py widgetsnbextension  # necessary for interactive sliders to show up\n",
     "jupyter notebook  # from the directory of this notebook\n",
-    "```"
+    "```\n",
+    "Alternatively, view this notebook on [Google Colab](https://colab.research.google.com/github/StanfordASL/AA203-Examples/blob/master/Lecture-1/Controlling%20a%20Double%20Integrator.ipynb)."
    ]
   },
   {
@@ -378,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
