Encode parentheses in Markdown link

--- a/Lecture-5/Free Final Time Problem.ipynb
+++ b/Lecture-5/Free Final Time Problem.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [Closed-form solution](https://www.wolframcloud.com/obj/schmrlng/Published/Optimal%20Control%20Example%20(Free%20Final%20Time).nb)"
+    "## [Closed-form solution](https://www.wolframcloud.com/obj/schmrlng/Published/Optimal%20Control%20Example%20%28Free%20Final%20Time%29.nb)"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "source": [
     "def free_final_time_analytical(a=1.0, b=1.0):\n",
     "    # Closed-form solution for optimal final time.\n",
-    "    # See https://www.wolframcloud.com/obj/schmrlng/Published/Optimal%20Control%20Example%20(Free%20Final%20Time).nb\n",
+    "    # See https://www.wolframcloud.com/obj/schmrlng/Published/Optimal%20Control%20Example%20%28Free%20Final%20Time%29.nb\n",
     "    return (1800 * b / a)**(1 / 5)\n",
     "\n",
     "\n",
