--- a/Recitation-1/Autodiff with JAX.ipynb
+++ b/Recitation-1/Autodiff with JAX.ipynb
@@ -178,7 +178,7 @@
     "\\partial{h}(x)^\\top w_0 \n",
     "&= \\partial{f_1}(y_0)^\\top \\cdots \\partial{f_{N-1}}(y_{N-2})^\\top \\partial{f_N}(y_{N-1})^\\top w_0 \\\\\n",
     "&= w_N \\\\\n",
-    "w_k &= \\partial{f_{N-k+1}}(y_{N-k})w_{k-1}\n",
+    "w_k &= \\partial{f_{N-k+1}}(y_{N-k})^\\top w_{k-1}\n",
     "\\end{aligned}.\n",
     "$$\n",
     "\n",
@@ -587,6 +587,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'function'>\n",
+      "<class 'function'>\n",
+      "<class 'function'>\n",
       "(5, 10, 2)\n",
       "(5, 10, 2)\n",
       "(5, 10, 2)\n"
@@ -602,13 +605,19 @@
     "    _, BΔu = jax.jvp(lambda u: f(x̄, u), (ū,), (Δu,))\n",
     "    return f_x̄ū, AΔx, BΔu\n",
     "\n",
+    "print(type(taylor))\n",
+    "\n",
     "n, m = 2, 1\n",
     "K, T = 5, 10\n",
     "x̄, ū = jnp.ones((K, n)), jnp.ones((K, m))\n",
     "Δx, Δu = jnp.ones((T, n)), jnp.ones((T, m))\n",
     "\n",
     "taylor = jax.vmap(taylor, in_axes=(None, None, 0, 0))\n",
+    "print(type(taylor))\n",
+    "\n",
     "taylor = jax.vmap(taylor, in_axes=(0, 0, None, None))\n",
+    "print(type(taylor))\n",
+    "\n",
     "c, Ax, Bu = taylor(x̄, ū, Δx, Δu)\n",
     "print(c.shape)\n",
     "print(Ax.shape)\n",
@@ -640,15 +649,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.44 ms ± 37.6 µs per loop (mean ± std. dev. of 10 runs, 100 loops each)\n",
-      "316 µs ± 164 µs per loop (mean ± std. dev. of 10 runs, 100 loops each)\n"
+      "1.68 ms ± 955 µs per loop (mean ± std. dev. of 10 runs, 100 loops each)\n",
+      "The slowest run took 5.34 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "347 µs ± 306 µs per loop (mean ± std. dev. of 10 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -761,6 +771,13 @@
     "print('                     ', subkeys[1], \n",
     "      '--> normal', jax.random.normal(subkeys[1], shape=(1,)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -784,7 +801,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.10.4"
   },
   "title": "AA 203 Recitation #1: Automatic Differentiation with JAX",
   "toc-autonumbering": true,
