Make LQR Variants notebook Python 3.7 (and thus Google Colab) compatible

--- a/Lecture-10/LQR Variants.ipynb
+++ b/Lecture-10/LQR Variants.ipynb
@@ -56,7 +56,8 @@
     "    f_u: jnp.array  # B\n",
     "\n",
     "    def __call__(self, x, u, k=None):\n",
-    "        return self.f_x @ x + self.f_u @ u if k is None else self[k](x, u)\n",
+    "        f_x, f_u = self\n",
+    "        return f_x @ x + f_u @ u if k is None else self[k](x, u)\n",
     "\n",
     "    def __getitem__(self, key):\n",
     "        return jax.tree_map(lambda x: x[key], self)\n",
@@ -67,7 +68,8 @@
     "    l_x: jnp.array  # L\n",
     "\n",
     "    def __call__(self, x, k=None):\n",
-    "        return self.l + self.l_x @ x if k is None else self[k](x)\n",
+    "        l, l_x = self\n",
+    "        return l + l_x @ x if k is None else self[k](x)\n",
     "\n",
     "    def __getitem__(self, key):\n",
     "        return jax.tree_map(lambda x: x[key], self)\n",
@@ -93,8 +95,8 @@
     "        )\n",
     "\n",
     "    def __call__(self, x, u, k=None):\n",
-    "        return (self.c + self.c_x @ x + self.c_u @ u + x @ self.c_xx @ x / 2 + u @ self.c_uu @ u / 2 +\n",
-    "                u @ self.c_ux @ x if k is None else self[k](x))\n",
+    "        c, c_x, c_u, c_xx, c_uu, c_ux = self\n",
+    "        return c + c_x @ x + c_u @ u + x @ c_xx @ x / 2 + u @ c_uu @ u / 2 + u @ c_ux @ x if k is None else self[k](x)\n",
     "\n",
     "    def __getitem__(self, key):\n",
     "        return jax.tree_map(lambda x: x[key], self)\n",
@@ -114,7 +116,8 @@
     "        )\n",
     "\n",
     "    def __call__(self, x, k=None):\n",
-    "        return self.v + self.v_x @ x + x @ self.v_xx @ x / 2 if k is None else self[k](x)\n",
+    "        v, v_x, v_xx = self\n",
+    "        return v + v_x @ x + x @ v_xx @ x / 2 if k is None else self[k](x)\n",
     "\n",
     "    def __getitem__(self, key):\n",
     "        return jax.tree_map(lambda x: x[key], self)\n",
@@ -472,7 +475,8 @@
    "outputs": [],
    "source": [
     "def ensure_positive_definite(a, eps=1e-3):\n",
-    "    return a + (eps - jnp.minimum(eps, jnp.linalg.eigvalsh(a)[0])) * jnp.eye(a.shape[-1])\n",
+    "    w, v = jnp.linalg.eigh(a)\n",
+    "    return (v * jnp.maximum(w, eps)) @ v.T\n",
     "\n",
     "\n",
     "class TotalCost(NamedTuple):\n",
@@ -538,11 +542,11 @@
     "\n",
     "        def rollout_linesearch_policy(alpha):\n",
     "            # Note that we roll out the true `dynamics`, not the `linearized_dynamics`!\n",
-    "            return rollout_state_feedback_policy(dynamics, AffinePolicy(alpha * policy.l, policy.l_x), x0, step_range,\n",
-    "                                                 xs, us)\n",
+    "            l, l_x = policy\n",
+    "            return rollout_state_feedback_policy(dynamics, AffinePolicy(alpha * l, l_x), x0, step_range, xs, us)\n",
     "\n",
     "        # Backtracking line search (step sizes evaluated in parallel).\n",
-    "        all_xs, all_us = jax.vmap(rollout_linesearch_policy)(0.5**jnp.arange(8))\n",
+    "        all_xs, all_us = jax.vmap(rollout_linesearch_policy)(0.5**jnp.arange(16))\n",
     "        js = jax.vmap(total_cost)(all_xs, all_us)\n",
     "        a = jnp.argmin(js)\n",
     "        j = js[a]\n",
