cleaned up Zermelo's problem, now with a picture

--- a/Zermelo's Problem.ipynb
+++ b/Zermelo's Problem.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -13,8 +14,8 @@
     "Example setup for a Ubuntu system (Mac users, maybe `brew` instead of `sudo apt`; Windows users, learn to love [WSL](https://docs.microsoft.com/en-us/windows/wsl/install-win10)):\n",
     "```\n",
     "/usr/bin/python3 -m pip install --upgrade pip\n",
-    "pip install --upgrade jupyter numpy matplotlib scipy jax cvxpy\n",
-    "jupyter notebook  # from the directory of this notebook\n",
+    "pip install --upgrade jupyterlab numpy matplotlib scipy jax cvxpy\n",
+    "jupyter lab  # from the directory of this notebook\n",
     "```\n",
     "Alternatively, view this notebook on [Google Colab](https://colab.research.google.com/github/StanfordASL/AA203-Examples/blob/master/Lecture-11/Zermelo's%20Problem.ipynb)."
    ]
@@ -25,23 +26,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cvxpy as cp\n",
-    "import jax\n",
-    "import jax.numpy as jnp\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.optimize import minimize, Bounds\n",
     "\n",
-    "# Constants used in plots below\n",
-    "t_f, N = 10, 20\n",
-    "h = t_f / N"
+    "import numpy as np\n",
+    "\n",
+    "from scipy.interpolate import interp1d\n",
+    "from scipy.optimize import minimize, Bounds"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Simultaneous Method (state and control decision variables)"
+    "# Zermelo's Ship\n",
+    "\n",
+    "Zermelo's navigation problem is a classic optimal control problem proposed in 1931 by Ernst Zermelo. In it, we have a ship that must cross a flowing river from a point on one bank to a point on the opposite bank. The ship travels at a fixed forward velocity. We can control its heading, which is bounded.\n",
+    "\n",
+    "<center><img src=\"img/zermelo.png\" width=\"600\"/></center>\n",
+    "\n",
+    "Our version of this optimal control problem is formulated as\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\operatorname*{minimize}_{x,u}\\enspace\n",
+    "&\\int_0^T u(t)^2 \\,dt\n",
+    "\\\\\n",
+    "\\operatorname{subject~to}\\enspace\n",
+    "&\\dot{x}(t) = \\begin{pmatrix}v\\cos(u(t)) + w(x(t)) \\\\ v\\sin(u(t))\\end{pmatrix},\\ \\forall t \\in [0,T] \\\\\n",
+    "&x(0) = 0 \\\\\n",
+    "&x(T) = (r_1, r_2) \\\\\n",
+    "&x_2(t) \\in [0, r_2],\\ \\forall t \\in [0,T] \\\\\n",
+    "&|u(t)| \\leq \\bar{u},\\ \\forall t \\in [0,T]\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "where $x_1(t)$ is the position of the ship along the river bank, $x_2(t)$ is the position of the ship across the water, $v > 0$ is the fixed forward velocity of the ship, $r = (r_1, r_2)$ is the position we wish to reach, and $w(x(t))$ represents the effect of the flowing water on our ship. Overall, we want to minimize the control effort used to reach our destination.\n",
+    "\n",
+    "In the code below, we apply a few direct methods from class to solve this problem."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Direct multiple shooting"
    ]
   },
   {
@@ -50,56 +78,105 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def zermelo_simultaneous(u_max=1.0, z0=None, verbose=True):\n",
+    "def solve_multiple_shooting(N=20, eps=1e-3, verbose=True,\n",
+    "                            t_init=None, x_init=None, u_init=None):\n",
+    "    \"\"\"Solve the Zermelo navigation problem with direct multiple shooting.\"\"\"\n",
+    "    # Constants\n",
+    "    n = 2           # state dimension\n",
+    "    m = 1           # control dimension\n",
+    "    T = 10.         # time horizon\n",
+    "    dt = T/N        # time step\n",
+    "    rx = 10.        # distance to destination along river bank\n",
+    "    ry = 5.         # width of the river\n",
+    "    v = 1.          # ship forward speed\n",
+    "    w_max = 0.35    # maximum water flow speed\n",
+    "    u_max = 0.75    # control magnitude bound\n",
+    "    x0 = np.array([0., 0.])\n",
+    "    xT = np.array([rx, ry])\n",
     "\n",
-    "    # Problem parameters\n",
-    "    t_f = 10\n",
-    "    M = 10\n",
-    "    ℓ = 5\n",
-    "    v = 1\n",
-    "    flow = lambda y: 0.35 / (ℓ**2 / 4) * y * (ℓ - y)\n",
+    "    # Define how to map between `(x, u)` trajectories and decision variable `z`\n",
+    "    get_xu = lambda z: (z[:n*(N + 1)].reshape((N + 1, n)), z[-N:])\n",
+    "    get_z = lambda x, u: np.concatenate([x.ravel(), u])\n",
     "\n",
-    "    # Discretization\n",
-    "    N = 20\n",
-    "    h = t_f / N\n",
     "\n",
-    "    # Decision variables\n",
-    "    # z = np.concatenate([x, y, u])\n",
-    "    get_x = lambda z: z[:N + 1]\n",
-    "    get_y = lambda z: z[N + 1:-N]\n",
-    "    get_u = lambda z: z[-N:]\n",
+    "    def dynamics(x, u):\n",
+    "        \"\"\"Evaluate the continuous-time dynamics of Zermelo's ship.\"\"\"\n",
+    "        # Water flow (quadratic profile)\n",
+    "        y = x[..., 1]\n",
+    "        w = (4*w_max/ry**2) * y * (ry - y)\n",
     "\n",
-    "    # Set up problem and `minimize`\n",
-    "    eps = 1e-3  # `minimize` can be a bit finicky about constraints, so slightly loosen state/control box constraints\n",
-    "    bounds = Bounds(\n",
-    "        np.concatenate([np.zeros(N + 1), np.zeros(N + 1), -u_max * np.ones(N)]) - eps,\n",
-    "        np.concatenate([M * np.ones(N + 1), ℓ * np.ones(N + 1), u_max * np.ones(N)]) + eps)\n",
+    "        # Compute state derivative (vectorized)\n",
+    "        dx = np.column_stack([v*np.cos(u) + w, \n",
+    "                              v*np.sin(u)])\n",
+    "        return dx\n",
     "\n",
-    "    cost = lambda z: h * np.sum(np.square(get_u(z)))\n",
+    "\n",
+    "    def dynamics_discretized(x, u, dt=dt):\n",
+    "        \"\"\"Evaluate the discretized dynamics of Zermelo's ship.\"\"\"\n",
+    "        x_next = x + dt*dynamics(x, u)\n",
+    "        return x_next\n",
+    "\n",
+    "\n",
+    "    def cost(z, dt=dt):\n",
+    "        \"\"\"Evaluate the cost function of the discretized problem.\"\"\"\n",
+    "        _, u = get_xu(z)\n",
+    "        J = dt*np.sum(u**2)\n",
+    "        return J\n",
+    "\n",
     "\n",
     "    def constraints(z):\n",
-    "        return np.concatenate([\n",
-    "            get_x(z)[1:] - get_x(z)[:-1] - h * (v * np.cos(get_u(z)) + flow(get_y(z)[:-1])),  # x dynamics constraint\n",
-    "            get_y(z)[1:] - get_y(z)[:-1] - h * v * np.sin(get_u(z)),                          # y dynamics constraint\n",
-    "            get_x(z)[[0, -1]] - np.array([0., M]),                                            # x initial/terminal constraint\n",
-    "            get_y(z)[[0, -1]] - np.array([0., ℓ])                                             # y initial/terminal constraint\n",
+    "        \"\"\"Evaluate the equality constraints of the discretized problem.\"\"\"\n",
+    "        x, u = get_xu(z)\n",
+    "        h = np.concatenate([\n",
+    "            np.ravel(x[1:] - dynamics_discretized(x[:-1], u)),  # dynamics\n",
+    "            x[0] - x0,                                          # initial\n",
+    "            x[-1] - xT,                                         # terminal\n",
     "        ])\n",
+    "        return h\n",
     "\n",
-    "    if z0 is None:\n",
-    "        z0 = np.concatenate([np.ones(N + 1), np.ones(N + 1), 0.5 * u_max * np.ones(N)])\n",
-    "#         z0 = np.concatenate([np.linspace(0, M, N + 1), np.linspace(0, ℓ, N + 1), 0.5 * u_max * np.zeros(N)])\n",
-    "    result = minimize(cost,\n",
-    "                      z0,\n",
-    "                      bounds=bounds,\n",
-    "                      constraints={\n",
-    "                          'type': 'eq',\n",
-    "                          'fun': constraints\n",
-    "                      },\n",
-    "                      options={'maxiter': 1000})\n",
+    "    # Define the inequality constraints of the discretized problem\n",
+    "    x_lb = np.broadcast_to([-np.inf, 0. - eps], (N + 1, n))\n",
+    "    x_ub = np.broadcast_to([np.inf, ry + eps], (N + 1, n))\n",
+    "    u_lb = np.broadcast_to(-u_max - eps, (N,))\n",
+    "    u_ub = np.broadcast_to(u_max + eps, (N,))\n",
+    "\n",
+    "    t = dt*np.arange(N + 1)\n",
+    "\n",
+    "    if x_init is None:\n",
+    "        # Initialize with straight line from `x0` to `xT`\n",
+    "        s = np.linspace(0, 1, N + 1)\n",
+    "        x_init = x0 + (xT - x0)*s.reshape([-1, 1])\n",
+    "    elif t_init is not None:\n",
+    "        x_init = interp1d(t_init, x_init, axis=0)(t)\n",
+    "    else:\n",
+    "        raise ValueError('Argument `t_init` must be provided if `x_init` is '\n",
+    "                         'not `None`.')\n",
+    "\n",
+    "    if u_init is None:\n",
+    "        # Initialize with some positive heading\n",
+    "        u_init = np.full(N, 0.5*u_max)\n",
+    "    elif t_init is not None:\n",
+    "        u_init = interp1d(t_init[:-1], u_init, axis=0)(t[:-1])\n",
+    "    else:\n",
+    "        raise ValueError('Argument `t_init` must be provided if `x_init` is '\n",
+    "                         'not `None`.')\n",
+    "\n",
+    "    z_lb = get_z(x_lb, u_lb)\n",
+    "    z_ub = get_z(x_ub, u_ub)\n",
+    "    z_init = get_z(x_init, u_init)\n",
+    "    result = minimize(\n",
+    "        cost, \n",
+    "        z_init, \n",
+    "        bounds=Bounds(z_lb, z_ub), \n",
+    "        constraints={'type': 'eq', 'fun': constraints},\n",
+    "        options={'maxiter': 1000}\n",
+    "    )\n",
     "    if verbose:\n",
     "        print(result)\n",
-    "\n",
-    "    return get_x(result.x), get_y(result.x), get_u(result.x)"
+    "    z = result.x\n",
+    "    J = cost(z)\n",
+    "    x, u = get_xu(z)\n",
+    "    return t, x, u, J"
    ]
   },
   {
@@ -108,241 +185,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_opt, y_opt, u_opt = zermelo_simultaneous()\n",
-    "plt.figure(figsize=(15, 8))\n",
-    "plt.subplot(1, 2, 1)\n",
-    "plt.plot(x_opt, y_opt)\n",
-    "plt.title(\"Optimal Trajectory\", fontsize=24)\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.title(\"Optimal Control\", fontsize=24)\n",
-    "plt.plot(np.arange(N) * h, u_opt)"
+    "N = 30\n",
+    "eps = 1.\n",
+    "warm_start = False\n",
+    "\n",
+    "if warm_start:\n",
+    "    t, x, u, J = solve_multiple_shooting(N, eps)\n",
+    "    fig, ax = plt.subplots(1, 2, figsize=(15, 5), dpi=100)\n",
+    "    ax[0].set_title('Optimal trajectory (slackened)')\n",
+    "    ax[0].plot(x[:, 0], x[:, 1])\n",
+    "    ax[0].set_xlabel(r'$x_1$')\n",
+    "    ax[0].set_ylabel(r'$x_2$')\n",
+    "    ax[1].set_title('Optimal control (slackened), $J(u) = {:.2f}$'.format(J))\n",
+    "    ax[1].plot(t[:-1], u)\n",
+    "    ax[1].set_xlabel(r'$t$')\n",
+    "    ax[1].set_ylabel(r'$u$')\n",
+    "else:\n",
+    "    t, x, u = None, None, None\n",
+    "t, x, u, J = solve_multiple_shooting(N, 0., t_init=t, x_init=x, u_init=u)\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(15, 5), dpi=100)\n",
+    "ax[0].set_title('Optimal trajectory')\n",
+    "ax[0].plot(x[:, 0], x[:, 1])\n",
+    "ax[0].set_xlabel(r'$x_1$')\n",
+    "ax[0].set_ylabel(r'$x_2$')\n",
+    "ax[1].set_title('Optimal control, $J(u) = {:.2f}$'.format(J))\n",
+    "ax[1].plot(t[:-1], u)\n",
+    "ax[1].set_xlabel(r'$t$')\n",
+    "ax[1].set_ylabel(r'$u$')\n",
+    "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "x_opt, y_opt, u_opt = zermelo_simultaneous(1.0, verbose=False)\n",
-    "x_opt, y_opt, u_opt = zermelo_simultaneous(0.75, np.concatenate([x_opt, y_opt, u_opt]))\n",
-    "plt.figure(figsize=(15, 8))\n",
-    "plt.subplot(1, 2, 1)\n",
-    "plt.plot(x_opt, y_opt)\n",
-    "plt.title(\"Optimal Trajectory\", fontsize=24)\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.title(\"Optimal Control\", fontsize=24)\n",
-    "plt.plot(np.arange(N) * h, u_opt)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Direct Shooting Method (control decision variables only)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def zermelo_shooting(u_max=1.0, u0=None, verbose=True):\n",
-    "\n",
-    "    # Problem parameters\n",
-    "    t_f = 10\n",
-    "    M = 10\n",
-    "    ℓ = 5\n",
-    "    v = 1\n",
-    "    flow = lambda y: 0.35 / (ℓ**2 / 4) * y * (ℓ - y)\n",
-    "\n",
-    "    # Discretization\n",
-    "    N = 20\n",
-    "    h = t_f / N\n",
-    "    dynamics = lambda x, u: x + h * np.array([v * np.cos(u) + flow(x[..., 1]), v * np.sin(u)])\n",
-    "\n",
-    "    # Set up problem and `minimize`\n",
-    "    eps = 1e-3\n",
-    "    bounds = Bounds(-u_max * np.ones(N), u_max * np.ones(N))  # control constraints\n",
-    "\n",
-    "    cost = lambda u: h * np.sum(np.square(u))\n",
-    "\n",
-    "    def constraints(u):\n",
-    "        state = np.zeros(2)\n",
-    "        constraint_list = []\n",
-    "        for ui in u:\n",
-    "            state = dynamics(state, ui)\n",
-    "            constraint_list.append(state)                     # state >= 0 (box constraint with below)\n",
-    "            constraint_list.append(np.array([M, ℓ]) - state)  # state <= [M, ℓ]\n",
-    "        constraint_list.append(state - np.array([M, ℓ]))      # terminal state >= [M, ℓ] as well (enforcing equality)\n",
-    "        return np.concatenate(constraint_list)\n",
-    "\n",
-    "    if u0 is None:\n",
-    "        u0 = 0.5 * u_max * np.ones(N)\n",
-    "    result = minimize(cost,\n",
-    "                      u0,\n",
-    "                      bounds=bounds,\n",
-    "                      constraints={\n",
-    "                          'type': 'ineq',\n",
-    "                          'fun': constraints\n",
-    "                      },\n",
-    "                      options={'maxiter': 1000})\n",
-    "    if verbose:\n",
-    "        print(result)\n",
-    "\n",
-    "    u_opt = result.x\n",
-    "    states = [np.zeros(2)]\n",
-    "    for ui in u_opt:\n",
-    "        states.append(dynamics(states[-1], ui))\n",
-    "    return [state[0] for state in states], [state[1] for state in states], u_opt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_opt, y_opt, u_opt = zermelo_shooting(1.0)\n",
-    "plt.figure(figsize=(15, 8))\n",
-    "plt.subplot(1, 2, 1)\n",
-    "plt.plot(x_opt, y_opt)\n",
-    "plt.title(\"Optimal Trajectory\", fontsize=24)\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.title(\"Optimal Control\", fontsize=24)\n",
-    "plt.plot(np.arange(N) * h, u_opt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_opt, y_opt, u_opt = zermelo_shooting(0.75)\n",
-    "plt.figure(figsize=(15, 8))\n",
-    "plt.subplot(1, 2, 1)\n",
-    "plt.plot(x_opt, y_opt)\n",
-    "plt.title(\"Optimal Trajectory\", fontsize=24)\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.title(\"Optimal Control\", fontsize=24)\n",
-    "plt.plot(np.arange(N) * h, u_opt)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Sequential Convex Programming"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def zermelo_scp(u_max=1.0, verbose=True):\n",
-    "\n",
-    "    # Problem parameters\n",
-    "    t_f = 10\n",
-    "    M = 10\n",
-    "    ℓ = 5\n",
-    "    v = 1\n",
-    "    flow = lambda y: 0.35 / (ℓ**2 / 4) * y * (ℓ - y)\n",
-    "\n",
-    "    # Discretization\n",
-    "    N = 20\n",
-    "    h = t_f / N\n",
-    "    dynamics = lambda x, u, np=jnp: x + h * np.array([v * np.cos(u[0]) + flow(x[1]), v * np.sin(u[0])])\n",
-    "\n",
-    "    # Linearization\n",
-    "    dynamics_jacobian = jax.jit(jax.jacfwd(dynamics, (0, 1)))\n",
-    "\n",
-    "    def linearized_dynamics(x_nom, u_nom, x, u):\n",
-    "        # Slightly different interface compared to your homework to force you guys to think\n",
-    "        f_x, f_u = map(np.array, dynamics_jacobian(x_nom, u_nom))\n",
-    "        return dynamics(x_nom, u_nom, np=np) + f_x @ (x - x_nom) + f_u @ (u - u_nom)\n",
-    "\n",
-    "    # Set up problem and apply sequential convex programming\n",
-    "    x0 = np.zeros(2)\n",
-    "    xf = np.array([M, ℓ])\n",
-    "    x_nom = np.linspace(x0, xf, N + 1)\n",
-    "    u_nom = 0.6 * u_max * np.ones((N, 1))\n",
-    "\n",
-    "    max_absolute_difference = np.inf\n",
-    "    for i in range(100):\n",
-    "        x = cp.Variable((N + 1, 2))\n",
-    "        u = cp.Variable((N, 1))\n",
-    "        s = cp.Variable()\n",
-    "        cost = cp.sum(h * cp.square(u))\n",
-    "        constraints = [x[i + 1] == linearized_dynamics(x_nom[i], u_nom[i], x[i], u[i]) for i in range(N)]\n",
-    "        constraints += [x[0] == x0, x[-1] == xf]                   # initial/terminal constraints\n",
-    "        constraints += [x >= x0[np.newaxis], x <= xf[np.newaxis]]  # state box constraints\n",
-    "        constraints += [cp.abs(u) <= u_max + s]                    # control constraints\n",
-    "        constraints += [s >= 0]                                    # slack variable must be positive\n",
-    "        problem = cp.Problem(cp.Minimize(cost + s), constraints)\n",
-    "\n",
-    "        cost_value = problem.solve()\n",
-    "        max_absolute_difference = max(np.max(np.abs(x_nom - x.value)), np.max(np.abs(u_nom - u.value)))\n",
-    "        if verbose:\n",
-    "            print(f\"Iteration {i:2}, cost = {cost_value:7.4f}, slack variable = {s.value:7.4f}, \"\n",
-    "                  f\"max_absolute_difference = {max_absolute_difference}\")\n",
-    "        converged = max_absolute_difference < 1e-3\n",
-    "        x_nom = x.value\n",
-    "        u_nom = u.value\n",
-    "        if converged:\n",
-    "            break\n",
-    "\n",
-    "    return x_nom[:, 0], x_nom[:, 1], u_nom"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_opt, y_opt, u_opt = zermelo_scp()\n",
-    "plt.figure(figsize=(15, 8))\n",
-    "plt.subplot(1, 2, 1)\n",
-    "plt.plot(x_opt, y_opt)\n",
-    "plt.title(\"Optimal Trajectory\", fontsize=24)\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.title(\"Optimal Control\", fontsize=24)\n",
-    "plt.plot(np.arange(N) * h, u_opt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_opt, y_opt, u_opt = zermelo_scp(0.75)\n",
-    "plt.figure(figsize=(15, 8))\n",
-    "plt.subplot(1, 2, 1)\n",
-    "plt.plot(x_opt, y_opt)\n",
-    "plt.title(\"Optimal Trajectory\", fontsize=24)\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.title(\"Optimal Control\", fontsize=24)\n",
-    "plt.plot(np.arange(N) * h, u_opt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.4 ('asl')",
    "language": "python",
    "name": "python3"
   },
@@ -356,7 +232,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "5c31a3fe7d2890db44c5275b7efec56700aacbace14bcd3a1b284fa1c629e01b"
+   }
   }
  },
  "nbformat": 4,
